Ajout collapse suivant exemplaires + corrections traduction

--- a/assets/css/layout/_bibliographic-result.scss
+++ b/assets/css/layout/_bibliographic-result.scss
@@ -51,43 +51,6 @@
 		padding-top: $spacer;
 		padding-bottom: $spacer;
 		border-top: $border-thin;
-
-		p {
-			margin-bottom: 0;
-		}
-
-		&--available,
-		&--disabled {
-			position: relative;
-			padding-left: $spacer;
-
-			&:before {
-				content: '';
-				position: absolute;
-				width: 10px;
-				height: 16px;
-				top: 0;
-				left: 0;
-				margin-top: 18px;
-				background-size: contain;
-				background-position: center top;
-				background-repeat: no-repeat;
-			}
-		}
-
-		&--available {
-
-			&:before {
-				background-image: url('/images/icones/icone-map-vert.svg');
-			}
-		}
-
-		&--disabled {
-
-			&:before {
-				background-image: url('/images/icones/icone-map-rouge.svg');
-			}
-		}
 	}
 
 	&--list {
